--- a/db/treasures.json
+++ b/db/treasures.json
@@ -7,7 +7,8 @@
   "photos":["/img/000000000000000000000001/0.png", "/img/000000000000000000000001/1.png"],
   "hints":["hint 1", "hint 2"],
   "tags":["tag 1", "tag 2"],
-  "isFound":false
+  "isFound":false,
+  "isLinkable":true
 }
 {
   "_id":{"$oid":"000000000000000000000002"},
@@ -18,7 +19,8 @@
   "photos":["/img/000000000000000000000002/0.png", "/img/000000000000000000000002/1.png"],
   "hints":["hint 1", "hint 2"],
   "tags":["tag 1", "tag 2"],
-  "isFound":false
+  "isFound":false,
+  "isLinkable":false
 }
 {
   "_id":{"$oid":"000000000000000000000003"},
@@ -29,5 +31,6 @@
   "photos":["/img/000000000000000000000003/0.png", "/img/000000000000000000000003/1.png"],
   "hints":["hint 1", "hint 2"],
   "tags":["tag 1", "tag 2"],
-  "isFound":false
+  "isFound":false,
+  "isLinkable":false
 }
