--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "moment": "^2.8.1",
     "mongodb": "^1.4.8",
     "morgan": "^1.2.3",
-    "multiparty": "^3.3.2"
+    "multiparty": "^3.3.2",
+    "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
     "blanket": "^1.1.6",
